added first section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,99 @@
             </div>
         </div>
     </header>
+     <main class="main">
+
+        <section class="plant-section inter-normal">
+            <div class="plant-container text-center">
+                <h2 class="plant-title noto-serif bold"><span class="text-color-orange">Our</span> Plants</h2>
+                <p class="plant-description text-normal font-22">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh</p>
+            </div>
+            <div class="carts-container">
+                <div class="cart">
+                    <div class="carts">
+                        <img class="flower-image" src="assets/sample-flower-image.png" alt="sample-image">
+                        <div class="flower-details-container">
+                            <p class="flower-detaits text-bold medium font-22">Lily</p>
+                            <h4 class="flower-price text-bold bold font-22">20 USD</h4>
+                        </div>
+                        <div class="button-container">
+                            <button class="btn-primary">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="carts">
+                        <img class="flower-image" src="assets/sample-flower-image.png" alt="sample-image">
+                        <div class="flower-details-container">
+                            <p class="flower-detaits text-bold medium font-22">Water Lily</p>
+                            <h4 class="flower-price text-bold bold font-22">20 USD</h4>
+                        </div>
+                        <div class="button-container">
+                            <button class="btn-primary">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="carts">
+                        <img class="flower-image" src="assets/sample-flower-image.png" alt="sample-image">
+                        <div class="flower-details-container">
+                            <p class="flower-detaits text-bold medium font-22">Tulip</p>
+                            <h4 class="flower-price text-bold bold font-22">20 USD</h4>
+                        </div>
+                        <div class="button-container">
+                            <button class="btn-primary">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="carts">
+                        <img class="flower-image" src="assets/sample-flower-image.png" alt="sample-image">
+                        <div class="flower-details-container">
+                            <p class="flower-detaits text-bold medium font-22">Cherry Blossom</p>
+                            <h4 class="flower-price text-bold bold font-22">20 USD</h4>
+                        </div>
+                        <div class="button-container">
+                            <button class="btn-primary">ADD TO CART</button>
+                        </div>
+                    </div>
+                
+                    <div class="carts">
+                        <img class="flower-image" src="assets/sample-flower-image.png" alt="sample-image">
+                        <div class="flower-details-container">
+                            <p class="flower-detaits text-bold medium font-22">Daisy</p>
+                            <h4 class="flower-price text-bold bold font-22">20 USD</h4>
+                        </div>
+                        <div class="button-container">
+                            <button class="btn-primary">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="carts">
+                        <img class="flower-image" src="assets/sample-flower-image.png" alt="sample-image">
+                        <div class="flower-details-container">
+                            <p class="flower-detaits text-bold medium font-22">Rose</p>
+                            <h4 class="flower-price text-bold bold font-22">20 USD</h4>
+                        </div>
+                        <div class="button-container">
+                            <button class="btn-primary">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="carts hidden">
+                        <img class="flower-image" src="assets/sample-flower-image.png" alt="sample-image">
+                        <div class="flower-details-container">
+                            <p class="flower-detaits text-bold medium font-22">Hibiscus</p>
+                            <h4 class="flower-price text-bold bold font-22">20 USD</h4>
+                        </div>
+                        <div class="button-container">
+                            <button class="btn-primary">ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="carts hidden">
+                        <img class="flower-image" src="assets/sample-flower-image.png" alt="sample-image">
+                        <div class="flower-details-container">
+                            <p class="flower-detaits text-bold medium font-22">Sun Flower</p>
+                            <h4 class="flower-price text-bold bold font-22">20 USD</h4>
+                        </div>
+                        <div class="button-container">
+                            <button class="btn-primary">ADD TO CART</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     
 </body>
 </html>
