added second section

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                     <div class="carts">
                         <img class="flower-image" src="assets/sample-flower-image.png" alt="sample-image">
                         <div class="flower-details-container">
-                            <p class="flower-detaits text-bold medium font-22">Cherry Blossom</p>
+                            <p class="flower-detaits text-bold medium font-22">Cherry</p>
                             <h4 class="flower-price text-bold bold font-22">20 USD</h4>
                         </div>
                         <div class="button-container">
@@ -135,6 +135,36 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <section class="plants-lover-section">
+            <div class="plants-lover-container">
+                <img class="flower-store-image" src="assets/flower-store.png" alt="Flower store image">
+                <img class="trusted-badge-image hidden" src="assets/trusted-badge.png" alt="Trusted badge image">
+            </div>
+            <div class="plant-lover-info">
+                <h3 class="plants-lover-title noto-serif text-bold bold font-50">
+                    Flower & Plants Lover
+                </h3>
+        
+                <ul>
+                    <li>
+                        <p class="plant-lover-description inter-normal font-22 text-normal">
+                           Every bouquet tells a story—crafted from vibrant petals, natural fragrance, and loving care. Let your home bloom with character and charm, one flower at a time.
+                        </p>
+                    </li>
+                    <li>
+                        <p class="plant-lover-description inter-normal font-22 text-normal">
+                            Our fresh flowers bloom with heart—from classic roses to rare finds, each arrangement sparks beauty, warmth, and unforgettable emotion.
+                        </p>
+                    </li>
+                    <li>
+                        <p class="plant-lover-description inter-normal font-22 text-normal">
+                          We offer vibrant bouquets that breathe life into any space, combining thoughtful curation, rich colors, and delicate scents to delight daily.
+                        </p>
+                    </li>
+                </ul>
             </div>
         </section>
     
