--- a/index.html
+++ b/index.html
@@ -167,6 +167,49 @@
                 </ul>
             </div>
         </section>
+
+        <section class="latest-deals-section">
+            <div class="latest-deals-info text-center">
+                <h3 class="latest-deals-info-title text-bold bold font-50">
+                    <span class="text-color-orange">Latest</span> Deals
+                </h3>
+                <p class="latest-deals-info-description text-normal font-22">
+                    Explore exclusive offers on our best-selling plants—handpicked for every occasion. Whether you crave cheerful blooms or graceful greens, our curated collection brings freshness, beauty, and savings right to your door.
+                </p>
+            </div>
+
+            <div class="latest-deals-image-container display-flex">
+                <div class="image-1">
+                    <div class="image-1-details text-center display-flex">
+                        <img class="image-11" src="assets/deal-bloom.png" alt="deal-bloom">
+                        <p class="bloom-plant text-white bold font-20 noto-serif">60% Off | Bloom Plant</p>
+                        <a class="bloom-plant-shop text-white font-16" href="">Shop Now</a>
+                    </div>
+                    <div class="image-2-detials text-center">
+                        <img class="image-12" src="assets/deal-ana.png" alt="deal-ana">
+                        <p class="ana-plant bold text-white font-20 noto-serif">30% Off | Ana Plant</p>
+                        <a class="ana-plant-shop text-white font-16" href="">Shop Now</a>
+                    </div>
+                </div>
+                <div class="image-2 text-center">
+                    <img class="image-21" src="assets/deal-zabo.png" alt="">
+                    <p class="zabo-plant noto-serif text-bold bold font-40">25% Off | Zabo Plant</p>
+                    <a class="shop text-white inter-normal" href="">Shop Now</a>
+                </div>
+            </div>
+        </section>
+
+        <section class="join-section">
+            <img src="assets/news-letter-bg.png" alt="news-letter-img">
+            <div class="join text-center">
+                <h3 class="join-section-title noto-serif text-bold bold font-50">Join the colorful Bunch</h3>
+                <div class="input">
+                    <input type="email" placeholder="Write email">
+                    <button class="subscribe-button">Subscribe</button>
+                </div>
+            </div>
+        </section>
+    </main>
     
 </body>
 </html>
