--- a/index.html
+++ b/index.html
@@ -210,6 +210,41 @@
             </div>
         </section>
     </main>
-    
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-logo">
+                <img class="footer-img" src="assets/logo.png" alt="footer logo">
+                <p class="footer-description text-normal inter-normal font-22">
+                    Where fragrance meets feeling. Every bloom tells your story. 
+                </p>
+            </div>
+            <div class="footer-links">
+                <ul>
+                    <li class="footer-item"><a href="" class="footer-links">Home</a></li>
+                    <li class="footer-item"><a href="" class="footer-links">About Us</a></li>
+                    <li class="footer-item"><a href="" class="footer-links">Blog</a></li>
+                    <li class="footer-item"><a href="" class="footer-links">FAQ</a></li>
+                    <li class="footer-item"><a href="" class="footer-links">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-list">
+                <ul>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Terms of Service</a></li>
+                    <li><a href="">Help Center</a></li>
+                </ul>
+            </div>
+
+            <div class="social-media">
+                <img src="assets/icon-linkedin.png" alt="linkedin">
+                <img src="assets/icon-twitter.png" alt="twitter">
+                <img src="assets/icon-facebook.png" alt="facebook">
+                <img src="assets/icon-youtube.png" alt="youtube">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
